--- a/LynxApp/LynxApp/View/Base.lproj/Main.storyboard
+++ b/LynxApp/LynxApp/View/Base.lproj/Main.storyboard
@@ -14,7 +14,7 @@
         <!--Menu View Controller-->
         <scene sceneID="yS1-yO-Obh">
             <objects>
-                <viewController storyboardIdentifier="menuViewController" id="dii-J3-FAH" customClass="MenuViewController" customModule="LynxApp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="menuViewController" automaticallyAdjustsScrollViewInsets="NO" id="dii-J3-FAH" customClass="MenuViewController" customModule="LynxApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3vi-AD-TOI">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -117,38 +117,39 @@
         <!--View Controller-->
         <scene sceneID="Jfl-lV-NOT">
             <objects>
-                <viewController id="ls7-Bd-Crf" sceneMemberID="viewController">
+                <viewController wantsFullScreenLayout="YES" automaticallyAdjustsScrollViewInsets="NO" id="ls7-Bd-Crf" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="F0D-qU-dKW">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3vb-Ln-5NS">
-                                <rect key="frame" x="0.0" y="20" width="375" height="43"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <connections>
-                                    <segue destination="xwm-Zp-qop" kind="embed" id="16c-G3-Aia"/>
-                                </connections>
-                            </containerView>
-                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JmM-uR-vQm">
+                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JmM-uR-vQm">
                                 <rect key="frame" x="0.0" y="59" width="375" height="544"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <connections>
                                     <segue destination="Lah-Zs-4j4" kind="embed" id="PhC-cr-f8w"/>
+                                </connections>
+                            </containerView>
+                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3vb-Ln-5NS">
+                                <rect key="frame" x="0.0" y="20" width="375" height="43"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <connections>
+                                    <segue destination="xwm-Zp-qop" kind="embed" id="16c-G3-Aia"/>
                                 </connections>
                             </containerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="TeC-Q5-rtv"/>
                     </view>
+                    <extendedEdge key="edgesForExtendedLayout"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="M4f-Ow-aG2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1284" y="298.2008995502249"/>
+            <point key="canvasLocation" x="1319" y="430"/>
         </scene>
         <!--Home Page View Controller-->
         <scene sceneID="kU6-BC-mQQ">
             <objects>
-                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="Lah-Zs-4j4" customClass="HomePageViewController" customModule="LynxApp" customModuleProvider="target" sceneMemberID="viewController"/>
+                <pageViewController autoresizesArchivedViewToFullSize="NO" automaticallyAdjustsScrollViewInsets="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="Lah-Zs-4j4" customClass="HomePageViewController" customModule="LynxApp" customModuleProvider="target" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pG7-JY-shR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2148" y="493"/>
@@ -246,7 +247,7 @@
         <!--Active Events Table View Controller-->
         <scene sceneID="0YY-iO-Wgr">
             <objects>
-                <tableViewController storyboardIdentifier="activeEventsTable" id="hpb-1f-7DK" customClass="ActiveEventsTableViewController" customModule="LynxApp" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="activeEventsTable" automaticallyAdjustsScrollViewInsets="NO" id="hpb-1f-7DK" customClass="ActiveEventsTableViewController" customModule="LynxApp" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="8w3-5a-MbM">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -299,7 +300,7 @@
         <!--User Info Table View Controller-->
         <scene sceneID="vp1-MP-eKO">
             <objects>
-                <tableViewController id="xwm-Zp-qop" customClass="UserInfoTableViewController" customModule="LynxApp" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController automaticallyAdjustsScrollViewInsets="NO" id="xwm-Zp-qop" customClass="UserInfoTableViewController" customModule="LynxApp" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="static" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="r8S-ra-K1g">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -339,6 +340,7 @@
                             <outlet property="delegate" destination="xwm-Zp-qop" id="yJq-hZ-02d"/>
                         </connections>
                     </tableView>
+                    <extendedEdge key="edgesForExtendedLayout"/>
                     <connections>
                         <outlet property="coinBalanceLabel" destination="hBv-bW-lJ4" id="fxl-6u-oiI"/>
                         <outlet property="nameLabel" destination="aiZ-11-wvo" id="NCA-m2-2mw"/>
@@ -757,7 +759,7 @@
         <!--User Events Table View Controller-->
         <scene sceneID="4Zl-Fa-evy">
             <objects>
-                <tableViewController storyboardIdentifier="userEventsTable" id="yda-kV-vpX" customClass="UserEventsTableViewController" customModule="LynxApp" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="userEventsTable" automaticallyAdjustsScrollViewInsets="NO" id="yda-kV-vpX" customClass="UserEventsTableViewController" customModule="LynxApp" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="9jW-nq-DfC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -826,7 +828,7 @@
         <!--Leaderboard Table View Controller-->
         <scene sceneID="oMM-2p-1Ue">
             <objects>
-                <tableViewController storyboardIdentifier="leaderboardTable" id="AOx-VL-eff" customClass="LeaderboardTableViewController" customModule="LynxApp" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="leaderboardTable" automaticallyAdjustsScrollViewInsets="NO" id="AOx-VL-eff" customClass="LeaderboardTableViewController" customModule="LynxApp" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="SO4-Wp-zmC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
